--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-modernist
-title: "Rashidi Zin: Spring Data Jpa Audit Example"
-description: "Enable database entity audit with Spring Boot and Spring Data Jpa's Audit"
+title: "Spring Data's @JpaAuditing Example"
+description: "An example to enable auditing feature with Spring Data Jpa"
