--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-modernist
 title: "Spring Data's @JpaAuditing Example"
-description: "An example to enable auditing feature with Spring Data Jpa"
+description: "Enable auditing feature with Spring Data Jpa"
